# video-ai

./: README.md  main.py  medical_instructions.md  pyproject.toml  server.py
static/: app.js  landing.css  styles.css
templates/: analysis.html  landing.html
