[project]
name = "video-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.133.1",
    "fpdf2>=2.8.3",
    "google-genai>=1.65.0",
    "jinja2>=3.1.6",
    "pillow>=12.1.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "uvicorn>=0.41.0",
    "vision-agents[deepgram,elevenlabs,gemini,getstream,huggingface,nvidia,ultralytics]>=0.3.8",
]
